classDiagram
    class PokerGame {
        +players: List[Player]
        +deck: Deck
        +community_cards: List[Card]
        +pot: int
        +current_phase: GamePhase
        +start()
        +new_hand()
        +betting_round()
        +determine_winner()
    }
    class Player {
        +name: str
        +chips: int
        +hand: List[Card]
        +bet(amount)
        +fold()
        +get_hand_strength()
    }
    class HandEvaluator {
        +evaluate_hand(cards)
    }
    PokerGame "1" -- "*" Player : manages
    PokerGame "1" -- "1" Deck : uses
    Player ..> HandEvaluator : uses
